--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "db",
+  "name": "@repo/db",
   "module": "index.ts",
   "type": "module",
   "private": true,
-  "exports":{
-    "./client":"./index.ts"
+  "exports": {
+    "./client": "./index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
     "dotenv": "^17.2.3",
