added cd pipline to dockerhub

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,11 +11,13 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@prisma/client": "^7.2.0",
     "@repo/ui": "*",
+    "db": "*",
     "next": "16.0.10",
+    "pg": "^8.16.3",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "@repo/db":"*"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
