--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "db:generate":"cd ./packages/db && bunx prisma generate && cd ../..",
+    "start:web":"cd ./apps/web && bun run start",
+    "start:backend":"cd ./apps/http && bun run start",
+    "start:ws":"cd ./apps/ws && bun run start "
   },
   "devDependencies": {
     "prettier": "^3.7.4",
