--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -1,13 +1,14 @@
 	FROM oven/bun:1
 	WORKDIR /usr/src/app
-
+	ARG DATABASE_URL
 	COPY ./packages ./packages
 	COPY  ./package.json ./package.json
 	COPY ./bun.lock ./bun.lock
 	COPY ./turbo.json ./turbo.json
 	COPY ./apps/http ./apps/http
 	RUN bun install
-	RUN bun run db:generate
+
+	RUN DATABASE_URL=${DATABASE_URL} bun run db:generate
 	COPY . .
 	EXPOSE 8081
 	CMD ["bun","run", "start:backend"] 
