--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -1,6 +1,7 @@
 	FROM oven/bun:1
 	WORKDIR /usr/src/app
 	ARG DATABASE_URL
+	ENV DATABASE_URL=$DATABASE_URL
 	COPY ./packages ./packages
 	COPY  ./package.json ./package.json
 	COPY ./bun.lock ./bun.lock
@@ -8,7 +9,7 @@
 	COPY ./apps/http ./apps/http
 	RUN bun install
 
-	RUN DATABASE_URL=${DATABASE_URL} bun run db:generate
+	RUN  bun run db:generate
 	COPY . .
 	EXPOSE 8081
 	CMD ["bun","run", "start:backend"] 
