--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -2,6 +2,7 @@
 	WORKDIR /usr/src/app
 
 	ARG DATABASE_URL
+	ENV DATABASE_URL=${DATABASE_URL}
 	COPY ./packages ./packages
 	COPY  ./package.json ./package.json
 	COPY ./bun.lock ./bun.lock
